# FundReportScraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  GEMINI.md  README.md  alembic.ini  deploy.sh  pyproject.toml  run_tests.sh  run_ultimate_analysis.py  setup.sh  setup_dev.sh  setup_platform.sh  stage4_milestone_verification_20250712_195036.json  stage4_milestone_verification_20250712_195131.json  start_api.sh  temp_request_body.json  temp_url.txt  test_core_functionality.py  verify_phase2_structure.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: parser_config.yaml
config/alembic/: alembic.dev.ini
config/docker/: Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
config/environments/: pyproject.toml
config/scripts/: setup.sh  verify_setup.sh
config/xbrl_taxonomies/: csrc_v2.1.json  default.json
docs/: user-guide.md
docs/implement/: PHASE_7_AI_ENHANCED_PARSING_PLAN.md  refactoring_plan.md  refactoring_plan_old.md
docs/operations/: 运维手册.md
docs/project/: 公募基金报告自动化采集与分析平台 - 产品需求文档 (PRD).md  公募基金报告自动化采集与分析平台 - 项目开发计划书.md  如何爬取基金定期报告.md
docs/refactoring/: PHASE_1_GUIDANCE.md  PHASE_1_PARSER_REFACTORING_PLAN.md  PHASE_2_GUIDANCE.md  PHASE_3_GUIDANCE.md  PHASE_4.1_CLEANUP_GUIDANCE.md  PHASE_4.2_REPAIR_PLAN.md  PHASE_4.3_REQUESTS_REFACTORING_PLAN.md  PHASE_4_GUIDANCE.md  PHASE_5_GUIDANCE.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_6_PARSING_VERIFICATION_PLAN.md  REFACTORING_PLAN.md
docs/technical/: WINDOWS_GEVENT_DEBUGGING_SUMMARY.md  (+2 more)
gui/: requirements.txt  web_admin.py
migrations/: env.py
reference/: README.md
reports/: 平安基金2025年度完整投资分析报告_20250712_180038.md  平安基金2025年度投资分析报告_20250712_174916.md  平安基金436只产品终极投资分析报告_20250712_182431.md  第五阶段开发完成报告.md  第四阶段开发完成报告.md  项目完整功能集成演示报告.md
scripts/: README.md  historical_backfill.py  init_db.sql  monitor_production.py  production_deploy.py  run_uat_tests.py  start_celery_worker.py  test_new_parser.py  validate_celery_config.py  verify_stage4_milestone.py  verify_stage5_milestone.py
src/: cli.py  main.py
test_phase5_downloads/: FUND_175240_REPORT_1752400420.xbrl  FUND_175240_REPORT_1752400421.xbrl
tests/: __init__.py  conftest.py  test_api.py
(+260 files in other folders)
